--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,49 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>FbLogin</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
 
-<%= yield %>
-
-</body>
+<header class="navbar navbar-fixed-top">
+  <div class="container">
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          Logged in as <strong><%= current_user.email %></strong>.
+          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+        <% else %>
+          <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+          <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+        <% end %>
+        <script src="https://cdn.auth0.com/js/lock-7.5.min.js"></script>
+        <script type="text/javascript">
+    
+        var lock = new Auth0Lock('Tg9tZs5iWpo3rMhEJAarDcXgQRsA1xPy', 'jlv44.auth0.com');
+        function signin() {
+          lock.show({
+              callbackURL: 'http://localhost:3000/auth/auth0/callback'
+            , responseType: 'code'
+            , authParams: {
+              scope: 'openid profile'
+            }
+          });
+        }</script>
+        <button onclick="signin()">Login</button>
+      </ul>
+    </nav>
+  </div>
+</header>
+    <% if notice %>
+        <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+        <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
+    <%= yield %>
+  </body>
 </html>
